sources/scss/style.scss
// @import "./modules/variables";
@import "./modules/normalize";
@import "./modules/scroll";
@import "./modules/navigation";
@import "./modules/loading";
@import "./modules/no-results";
@import "./modules/footer-menu";

*,
*:after,
*:before {
  box-sizing: border-box;
}

html {
  height: 100%;
  font-size: 62.5%;
}

body {
  position: relative;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
    Segoe UI Emoji;
  font-size: 1.6rem;
  font-weight: 400;
  font-style: normal;
  min-height: 100%;
  color: #000;
  text-rendering: optimizeLegibility;
  overflow-x: hidden;
  background: #d6d6d6;
  background: linear-gradient(to bottom, #d6d6d6 0%, #f6f6f6 50%, #c3c3c3 100%);
  background-attachment: fixed;
}

a {
  text-decoration: none;
  padding-bottom: 10px;
  color: $color-blue;
  padding-bottom: 5px;
  font-weight: 600;
  border-bottom: 2px solid lighten($color-blue, 40%);

  &:hover {
    border-bottom: 2px solid $color-blue;
  }
}

input[type="text"] {
  height: 38px;
  padding: 6px 10px;
  width: 100%;
  background-color: $white;
  border: 1px solid #d1d1d1;
  border-radius: 4px;
  font-size: 16px;
  box-shadow: none;
  box-sizing: border-box;

  &:focus {
    border: 1px solid #33c3f0;
    outline: 0;
  }
}

.container {
  position: relative;
  max-width: 960px;
  margin: auto;
}

.row {
  margin-bottom: 10px;
}

.hidden {
  display: none;
}

.form__search {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  margin: auto;
  z-index: 1;
  padding: 10px;
  height: 70px;
  box-shadow: 0 4px 15px -4px rgba(0, 0, 0, 0.2);
  background: $white;

  input {
    margin-bottom: 0;
    padding-right: 40px;
  }
}

.title {
  padding: 10px 15px 10px 10px;
  line-height: 120%;

  &::first-letter {
    text-transform: uppercase;
  }
}

.gradient__row {
  position: relative;
  border: 1px solid lighten($color-gray, 50%);
  background-color: $white;
  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  margin-left: 25px;
  transition: all 100ms;
  cursor: pointer;

  &::before {
    position: absolute;
    content: "";
    top: 0;
    bottom: 0;
    left: -22px;
    margin: auto;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    border: 2px solid $white;
    transition: all 100ms;
    box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.6);
  }

  &:hover::before {
    width: 22px;
    height: 22px;
    left: -25px;
    box-shadow: 0 2px 2px 0 rgba(102, 102, 102, 0.4);
  }
}

@each $name,
$hex in $colors {
  .gradient-#{$name}::before {
    background: $hex;
  }
}

.container__list {
  position: relative;
  width: 100%;
  max-width: 960px;
  margin: auto;
  opacity: 1;
  padding-bottom: 5px;
  transition: opacity 1s;

  &::before {
    position: absolute;
    content: "";
    background: $white;
    background: linear-gradient(to bottom,
        rgba(255, 255, 255, 0) 0%,
        rgba(44, 44, 44, 1) 20%,
        rgba(44, 44, 44, 1) 80%,
        rgba(237, 237, 237, 0) 100%);
    left: 12px;
    width: 1px;
    height: 100%;
  }
}

.list__trash {
  margin-bottom: 50px;
  padding: 80px 0 10px;

  @include breakpoint(medium) {
    margin-bottom: 120px;
  }

  @include breakpoint(small) {
    margin-bottom: 90px;
    padding: 80px 10px 0 0;
  }
}

.more__info {
  position: absolute;
  top: 0;
  right: 0;
  width: 38px;
  height: 38px;
  z-index: 999;
  background-color: lighten($black, 25%);
  cursor: pointer;
  border-radius: 3px;
  border: none;
}

.type__trash {
  display: inline-block;
  margin: 5px 10px 0;
  font-size: 1.2rem;
  text-transform: uppercase;

  [data-trash="7"] {
    cursor: pointer;
  }

  span {
    font-weight: 700;
    color: $white;
    background-color: $black;
    padding: 1px 5px;
    border-radius: 3px;
  }
}

.active-info {
  overflow: hidden;
}

.info-section {
  margin-bottom: 20px;
}

